2003-09-22	ujwal

    * Added iTerm-Aqua.jpg as the default background image.
    
2003-09-21	ujwal

    * When PTYSession: terminate is called, we wait for shell task to exit 
      after sending it the SIGHUP signal.
    * Changed some NSImage calls of initByReferencingFile to initWithContentsOfDile 
      so that an attempt to init the image is made immediately.

2003-09-16	ujwal

    * Added support to change background image after session has been opened.
    * Added scripting support to set background image.

2003-09-15	fabian

    * Fixed a bug that causes wrong color of new line character (introduced in 0.7.7).
    
2003-09-15	ujwal

    * Removed "Choose" button for background images in the session 
      preferenced UI.

2003-09-14	fabian

    * Fixed a bug in removeOverLine that causes crashes.
    * Fixed a bug in DeleteCharacters that causes crashes.
    
2003-09-14	ujwal

    * Fixed a bunch of bugs that prevented scripting from working.

2003-09-13	ujwal

    * Moved more session-specific code to from PseudoTerminal to PTYSession. 
      Potential for each tab to have its own font. Screen sizing issues need 
      to be worked out.
    * Fixed bug in PTYTabView that prevented non-selected tabs from being dragged.

2003-09-12	ujwal

    * Changed preview of background image to a real NSImageView.
    * Fixed image scaling issue.

2003-09-11	ujwal

    * Added support for background images including transparency.
    * Fixed showCursor bug.
    * Not setting updateIndex = 0 in restoreBuffer; causes screen contents to be lost on man and vi.

2003-09-11	fabian

    * Fixed a bug in showCursor that causes assertation failures.
    * Fixed a bug that causes sometimes incorrect screen refreshing.
    
2003-09-10	fabian

    * Changed doIdleCode behavior to reduce CPU using of idle sessions.
    * Fixed a bug in save/restore buffer, and revert the eraseInDisplay code.
    
2003-09-10	ujwal

    * Fixed massive memory leaks.